# ComfyUI-N-Sidebar

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
app/css/: base_style.css  base_style_sb.css
app/html/: sidebar.html  test.html
app/js/: fts_fuzzy_match.js  sidebar_node.js
app/js/functions/: sb_fn.js  settings.js  utils.js
app/panels/assets_downloader/: assets_downloader.html  assets_downloader.jsb  style.css
app/panels/custom_categories/: custom_categories.html  custom_categories.jsb  style.css
app/panels/custom_templates/: custom_templates.html  custom_templates.jsb  style.css
app/panels/custom_workflows/: custom_workflows.html  custom_workflows.jsb  style.css
app/panels/terminal/: style.css  terminal.html  terminal.jsb
app/views/: custom_views.json  views.json  views_default.json
custom_test/: custom_test.html  custom_test.js
js/: fts_fuzzy_match.js  sidebar_node.js
