[project]
name = "comfyui-n-sidebar"
description = "A simple sidebar for ComfyUI."
version = "1.6.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Nuked88/ComfyUI-N-Sidebar"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nuked"
DisplayName = "ComfyUI-N-Sidebar"
Icon = ""
